...
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TableRow>
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="80dip"
                android:text="0" />
        </TableRow>

        <TableRow>
...
            android:id="@+id/buttonc"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:text="C" />

            <Button
                android:id="@+id/button0"
                android:layout_width="80dip"
                android:layout_height="80dip"
                android:text="0" />

            <Button
                android:id="@+id/buttonequals"
...
